--- a/postwhite.conf
+++ b/postwhite.conf
@@ -3,19 +3,32 @@
 # POSTWHITE WILL LOOK FOR THIS FILE IN /etc/postwhite.conf
 
 # FILE PATHS
-spftoolspath=/usr/local/bin/spf-tools 
+spftoolspath=/usr/src/spf-tools 
 postfixpath=/etc/postfix
 postfixbinarypath=/usr/sbin
 whitelist=postscreen_spf_whitelist.cidr
 blacklist=postscreen_spf_blacklist.cidr 
-yahoo_static_hosts=/usr/local/bin/postwhite/yahoo_static_hosts.txt
+yahoo_static_hosts=/usr/src/postwhite/yahoo_static_hosts.txt
+zuora_static_hosts=/usr/src/postwhite/zuora_static_hosts.txt
+ovh_static_hosts=/usr/src/postwhite/ovh_static_hosts.txt
+custom_user_hosts=/usr/src/postwhite/techydata.txt
 
 # CUSTOM HOSTS
 # Enter custom hosts separated by a space, ex: "example.com example2.com example3.com"
-custom_hosts=""
+custom_hosts="ato.gov.au mail.elderscrollsonline.com elderscrollsonline.com namecheap.com \
+	mittoni.com.au cw.com.au compuworld.com.au emtec.com.au binarylane.com.au synergywholesale.com maxo.com.au"
 
-# Include list of Yahoo Outbound IPs from https://help.yahoo.com/kb/SLN23997.html?
+# Include list of AOL/Yahoo) Outbound IPs from https://postmaster.yahooinc.com/mail-servers
 include_yahoo="yes"
+
+# Include list of Zuora Outbound IPs from https://knowledgecenter.zuora.com/BB_Introducing_Z_Business/Policies/Inbound_and_Outbound_IP_Addresses
+include_zuora="yes"
+
+# Include DNS scraped mailers for OVH
+include_ovh="yes"
+
+# Include user custom hosts file
+include_custom="yes"
 
 # Do you also want to build a blacklist?
 enable_blacklist=no
@@ -23,12 +36,13 @@ blacklist_hosts=""
 
 # Do what to invalid IPv4 addresses and CIDRs?
 # Valid settings are 'remove' 'fix' or 'keep'
-invalid_ip4=remove
+invalid_ip4=fix
  
 # Simplify (remove) IP addresses from the whitelist that are already covered by CIDRs?
 # WARNING: Enabling this option can dramatically increase the time Postwhite takes to
 # run if you have many mailers selected. Try it once, then come back and turn it off. :)
 simplify=no
 
-# Reload Postfix Automatically when done?
-reload_postfix=yes
+# Postfix Task when done?
+# Valid settings are 'reload', 'restart' or 'none'
+postfix_task=restart
