added proofpoint scrape, and some more bulk emailers

--- a/postwhite.conf
+++ b/postwhite.conf
@@ -11,6 +11,7 @@ blacklist=postscreen_spf_blacklist.cidr
 yahoo_static_hosts=/usr/src/postwhite/yahoo_static_hosts.txt
 zuora_static_hosts=/usr/src/postwhite/zuora_static_hosts.txt
 ovh_static_hosts=/usr/src/postwhite/ovh_static_hosts.txt
+proofpoint_static_hosts=/usr/src/postwhite/proofpoint_static_hosts.txt
 custom_user_hosts=/usr/src/postwhite/techydata.txt
 
 # CUSTOM HOSTS
