--- a/postwhite.conf
+++ b/postwhite.conf
@@ -28,6 +28,9 @@ include_zuora="yes"
 # Include DNS scraped mailers for OVH
 include_ovh="yes"
 
+# Include ProofPoint Scrapped mailers
+include_proofpoint="yes"
+
 # Include user custom hosts file
 include_custom="yes"
 
