Added SparkPost Scrape

--- a/postwhite.conf
+++ b/postwhite.conf
@@ -8,16 +8,23 @@ postfixpath=/etc/postfix
 postfixbinarypath=/usr/sbin
 whitelist=postscreen_spf_whitelist.cidr
 blacklist=postscreen_spf_blacklist.cidr 
+
+# Imported Lists
 yahoo_static_hosts=/usr/src/postwhite/yahoo_static_hosts.txt
 zuora_static_hosts=/usr/src/postwhite/zuora_static_hosts.txt
 ovh_static_hosts=/usr/src/postwhite/ovh_static_hosts.txt
 proofpoint_static_hosts=/usr/src/postwhite/proofpoint_static_hosts.txt
+sparkpost_static_hosts=/usr/src/postwhite/sparkpost_static_hosts.txt
 custom_user_hosts=/usr/src/postwhite/techydata.txt
 
 # CUSTOM HOSTS
 # Enter custom hosts separated by a space, ex: "example.com example2.com example3.com"
 custom_hosts="ato.gov.au mail.elderscrollsonline.com elderscrollsonline.com namecheap.com \
-	mittoni.com.au cw.com.au compuworld.com.au emtec.com.au binarylane.com.au synergywholesale.com maxo.com.au"
+	      mittoni.com.au cw.com.au compuworld.com.au emtec.com.au binarylane.com.au \
+	      synergywholesale.com maxo.com.au nexigen.digital manage.synergywholesale.com \
+	      education.vic.gov.au idolsolutions.com fleetcard.com.au freedominternet.org \
+	      gilchristmanagement.com.au shiftcare.com tppwholesale.com.au fleetcard.com.au \
+	      bfcards.com.au"
 
 # Include list of AOL/Yahoo) Outbound IPs from https://postmaster.yahooinc.com/mail-servers
 include_yahoo="yes"
@@ -30,6 +37,9 @@ include_ovh="yes"
 
 # Include ProofPoint Scrapped mailers
 include_proofpoint="yes"
+
+# Include SparkPost Scrapped mailers
+include_sparkpost="yes"
 
 # Include user custom hosts file
 include_custom="yes"
